deploy/magick8sball-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: magick8sball
  name: magick8sball-svc
  namespace: magick8sball
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: magick8sball
  type: ClusterIP
